# Maia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/maps/: Floor.tsx  Ground0.tsx  Tile.tsx  Wall.tsx  map0.tmx
include/: AnimatedSprite.hpp  Animation.hpp  Player.hpp
src/: AnimatedSprite.cpp  Animation.cpp  CMakeLists.txt  Player.cpp  main.cpp  pythontest.cpp
